--- a/src/app/components/app-page/app-page.component.html
+++ b/src/app/components/app-page/app-page.component.html
@@ -31,9 +31,9 @@
         </div>
         <div class="col-lg-6">
             <h1 class="fontColorRed text-center">
-                <i class="fas fa-satellite-dish"></i>
+                <i class="fas fa-satellite-dish fontSizeResponsiveThree"></i>
             </h1>
-            <p class="mt-5 textColorGray">
+            <p class="mt-5 textColorGray fontSizeResponsiveTwo">
                 The NQi-Series has an on-board computer that constantly communicates with the cloud so you can receive
                 real-time data on your mobile phone like:
             </p>
@@ -52,10 +52,10 @@
     <div class="row">
         <div class="col-lg-6">
             <h1 class="text-center pt-3">
-                <i class="fas fa-wifi fontColorRed"></i>
+                <i class="fas fa-wifi fontColorRed fontSizeResponsiveThree"></i>
             </h1>
             <h1 class="text-center my-5">NQi-Series + NIU Cloud + APP</h1>
-            <h4 class="textColorGray text-center">A Connected Scooter</h4>
+            <h4 class="textColorGray text-center fontSizeResponsiveTwo">A Connected Scooter</h4>
         </div>
         <div class="col-lg-6 d-flex justify-content-center">
             <figure class="hover-rotate">
@@ -66,17 +66,17 @@
 </div>
 <div class="container my-5">
     <div class="row">
-        <div class="col-lg-6 d-flex justify-content-center align-item-center">
+        <div class="col-lg-6 d-flex justify-content-center align-items-center">
             <figure class="hover-rotate">
                 <img src="assets/img/appPageImg/appRotateThree.jpg" />
             </figure>
         </div>
         <div class="col-lg-6">
-            <h1>A Smart NIU</h1>
+            <h1 class="text-center">A Smart NIU</h1>
             <h3 class="textColorGray my-5">Connected and Smart</h3>
-            <p class="textColorGray">Real-time GPS / Anti-theft Alert + Alarm / Real-time diagnostics / Service Station
+            <p class="textColorGray fontSizeResponsiveTwo">Real-time GPS / Anti-theft Alert + Alarm / Real-time diagnostics / Service Station
                 Directory</p>
-            <p class="textColorGray mb-5">In a world of connected devices, we asked why are scooters disconnected from
+            <p class="textColorGray mb-5 fontSizeResponsiveTwo">In a world of connected devices, we asked why are scooters disconnected from
                 the
                 cloud? We set out to change this.</p>
         </div>
