--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -5,6 +5,10 @@
     }
 }
 
+.borderPer{
+    border-bottom: 1px solid #757575;
+}
+
 .bodyCard{
     display: flex !important;
     flex-direction: column !important;
