--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -24,58 +24,57 @@
         </div>
     </div>
 </div>
+<div class="container mt-5 borderPer">
+    <h1 class="text-center fontColor fontSizeResponsive">Niu lifestyle</h1>
+</div>
 <div class="container my-5">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="row">
-                <div class="col-lg-6 d-flex justify-content-center align-items-center">
-                    <div class="image-card perspective-left imageCardBackground"></div>
-                </div>
-                <div class="col-lg-6 d-flex flex-column justify-content-center align-items-center text-center">
-                    <i class="fas fa-charging-station fontColor fs-1 pb-5"></i>
-                    <p>Con la movilidad eléctrica podemos bajar los niveles de contaminación en nuestras ciudades, incluso recuperar la capa de ozono.</p>
-                    <h5 class="fontColor py-3">¿Esto qué demuestra?</h5>
-                    <p>Que la reducción de los gases tóxicos y CO2 en nuestro planeta, es una estrategia muy potente para hacer frente al cambio climático y frenarlo.</p>
-                </div>
-            </div>
+    <div class="row d-flex justify-content-center align-items-center text-center">
+        <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-6">
+            <div class="image-card perspective-left imageCardBackground imgResponsive"></div>
         </div>
-        <div class="col-lg-12 my-5">
-            <div class="row">
-                <div class="col-lg-6 d-flex flex-column justify-content-center align-items-center text-center">
-                    <i class="fas fa-crown fontColor fs-1 pb-5"></i>
-                    <h1 class="pb-5">Motores Bosch</h1>
-                    <p>Lo sabemos, tenemos la mas alta tecnología para que disfrutes los recorridos con mayor tranquilidad.</p>
-                </div>
-                <div class="col-lg-6 d-flex justify-content-center align-items-center">
-                    <div class="image-card perspective-right imageCardBackgroundTwo"></div>
-                </div>
-            </div>
+        <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-6 flex-column">
+            <i class="fas fa-charging-station fontColor fs-1 pb-5 fontSizeResponsive"></i>
+            <p class="fontSizeResponsiveTwo">With electric mobility we can lower the levels of pollution in our cities, even recover the ozone layer.</p>
+            <h5 class="fontColor py-3 fontSizeResponsive">What does this show?</h5>
+            <p class="fontSizeResponsiveTwo">That the reduction of toxic gases and CO2 on our planet is a very powerful strategy to face climate change and stop it.</p>
         </div>
-        <div class="col-lg-12 my-5">
-            <div class="row">
-                <div class="col-lg-6 d-flex justify-content-center align-items-center">
-                    <div class="image-card perspective-left imageCardBackgroundThree"></div>
-                </div>
-                <div class="col-lg-6 d-flex flex-column justify-content-center align-items-center text-center">
-                    <i class="fas fa-volume-mute fontColor fs-1 pb-5"></i>
-                    <h4>¿Te imaginas las ciudades sin ruidos de carros?</h4>
-                    <p>Empecemos poniendo de nuestra parte.</p>
-                    <h5 class="fontColor py-3">Pásate a NIU</h5>
-                </div>
-            </div>
+    </div>
+</div>
+<div class="container my-5">
+    <div class="row d-flex justify-content-center align-items-center text-center">
+        <div class="col-md-12 col-lg-6 flex-column">
+            <i class="fas fa-crown fontColor fs-1 pb-5 fontSizeResponsive"></i>
+            <h1 class="pb-5">Bosch motors</h1>
+            <p class="fontSizeResponsiveTwo">We know it, we have the highest technology so that you can enjoy the tours with greater peace of mind.</p>
+        </div>
+        <div class="col-md-12 col-lg-6">
+            <div class="image-card perspective-right imageCardBackgroundTwo imgResponsive"></div>
+        </div>
+    </div>
+</div>
+<div class="container my-5">
+    <div class="row d-flex justify-content-center align-items-center text-center">
+        <div class="col-md-12 col-lg-6">
+            <div class="image-card perspective-left imageCardBackgroundThree imgResponsive"></div>
+        </div>
+        <div class="col-md-12 col-lg-6 flex-column">
+            <i class="fas fa-volume-mute fontColor fs-1 pb-5 fontSizeResponsive"></i>
+            <h2>Can you imagine cities without car noise?</h2>
+            <p class="fontSizeResponsiveTwo">Let's start by doing our part.</p>
+            <h5 class="fontColor py-3 fontSizeResponsive">Go to NIU</h5>
         </div>
     </div>
 </div>
 <div class="container my-5">
     <div class="row">
         <div class="col-6 d-flex align-items-center text-center flex-column justify-content-center">
-            <i class="fas fa-biking fs-1 pb-5 fontColor"></i>
-            <h1 class="pb-3">Diferentes colores</h1>
-            <h2>Para diferentes personalidades</h2>
-            <h3>Marca la diferencia</h3>
+            <i class="fas fa-biking fs-1 pb-5 fontColor fontSizeResponsive"></i>
+            <h1 class="pb-3">Different colors</h1>
+            <h3 class="mb-5">For different personalities</h3>
+            <h5 class="fontSizeResponsiveTwo">Mark the difference!!</h5>
         </div>
         <div class="col-6">
-            <div id="carouselOneHome" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div id="carouselOneHome" class="carousel slide carousel-dark carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner radiusCarousel">
                     <div class="carousel-item">
                         <img src="./assets/img/carouselTwoHome/twoCarouselTwo.jpg" class="d-block w-100">
@@ -131,17 +130,17 @@
             </div>
         </div>
         <div class="col-6 d-flex align-items-center text-center flex-column justify-content-center">
-            <i class="fas fa-route fs-1 pb-5 fontColor"></i>
-            <h1 class="pb-3">Diferentes autonomias</h1>
-            <h2>Para suplir todas tus necesidades</h2>
-            <p class="pt-3 fs-5">Es momento de transportarse en moto eléctrica NIU.</p>
-            <h3 class="fontColor">Que esperas!</h3>
+            <i class="fas fa-route fs-1 pb-5 fontColor fontSizeResponsive"></i>
+            <h1 class="pb-3">Different autonomies</h1>
+            <h3>To supply all your needs</h3>
+            <p class="pt-3 fs-6 fontSizeResponsiveTwo">It's time to get around on an NIU electric motorcycle.</p>
+            <h4 class="fontColor fontSizeResponsiveTwo">What are you waiting for!!</h4>
         </div>
     </div>
 </div>
 <div class="container my-5">
     <div class="row my-5">
-        <div class="header d-flex align-items-center justify-content-center">
+        <div class="header d-flex align-items-center justify-content-center my-5">
             <h2 class="fw-bold fs-1">NIU INSPIRE</h2>
         </div>
         <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -154,8 +153,8 @@
                         </div>
                         <div class="col-md-8 containerCard">
                             <div class="card-body bodyCard">
-                                <h1 class="card-title">10,500,634,500</h1>
-                                <p class="card-text">Distancia total cubierta</p>
+                                <h1 class="card-title fontSizeResponsiveThree">10,500,634,500<sup class="fs-6">KM</sup></h1>
+                                <p class="card-text fontSizeResponsiveTwo">Total distance covered</p>
                             </div>
                         </div>
                     </div>
@@ -170,8 +169,8 @@
                         </div>
                         <div class="col-md-8 containerCard">
                             <div class="card-body bodyCard">
-                                <h1 class="card-title">22,500</h1>
-                                <p class="card-text">Número de riders hoy</p>
+                                <h1 class="card-title fontSizeResponsiveThree">22,500</h1>
+                                <p class="card-text fontSizeResponsiveTwo">Number of riders today</p>
                             </div>
                         </div>
                     </div>
@@ -188,8 +187,8 @@
                         </div>
                         <div class="col-md-8 containerCard">
                             <div class="card-body bodyCard">
-                                <h1 class="card-title">2,625,616,896</h1>
-                                <p class="card-text">CO₂ evitado</p>
+                                <h1 class="card-title fontSizeResponsiveThree">2,625,616,896<sup class="fs-6"> KG</sup></h1>
+                                <p class="card-text fontSizeResponsiveTwo">CO₂ avoided</p>
                             </div>
                         </div>
                     </div>
@@ -204,8 +203,8 @@
                         </div>
                         <div class="col-md-8 containerCard">
                             <div class="card-body bodyCard">
-                                <h1 class="card-title">131,280,512</h1>
-                                <p class="card-text">Equivalente a planta este nº de pinos</p>
+                                <h1 class="card-title fontSizeResponsiveThree">131,280,512</h1>
+                                <p class="card-text fontSizeResponsiveTwo">Equivalent to this plant nº of pines</p>
                             </div>
                         </div>
                     </div>
