--- a/src/app/components/scooters-page/scooters-page.component.html
+++ b/src/app/components/scooters-page/scooters-page.component.html
@@ -1,1 +1,235 @@
-<p>scooters-page works!</p>
+<div class="container-fluid px-0 mb-5">
+    <img src="assets/img/scootersImg/imgCarousel/NIUstreet.jpg" class="w-100 rounded">
+</div>
+<div class="container-fluid mt-5">
+    <div class="container d-flex justify-content-center align-items-center">
+        <img src="assets/img/imScootersPage/imgNgts.svg" class="w-25">
+    </div>
+    <div class="row">
+        <div class="col-lg-6 offset-lg-1">
+            <div id="carouselNgt" class="carousel slide carousel-dark" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img #asNgtImgOne src="assets/img/imScootersPage/imgCarouselNgts/imgNgtWhiteOne.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img #asNgtImgTwo src="assets/img/imScootersPage/imgCarouselNgts/imgNgtWhiteTwo.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img #asNgtImgThree src="assets/img/imScootersPage/imgCarouselNgts/imgNgtWhiteThree.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img #asNgtImgFour src="assets/img/imScootersPage/imgCarouselNgts/imgNgtWhiteFour.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselNgt" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselNgt" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div class="d-flex justify-content-center align-items-center">
+                <div #ngtSelectWhite class="circleSelector bg-white"></div>
+                <div #ngtSelectRed class="circleSelector bg-danger"></div>
+                <div #ngtSelectGray class="circleSelector bgGray"></div>
+                <div #ngtSelectBlack class="circleSelector bgVeryDark"></div>
+                <div #ngtSelectDark class="circleSelector bg-dark"></div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="pt-5">
+                <ul>
+                    <li class="fw-bold pb-4">
+                        <h5 class="fontResponsive">PERFORMANCE</h5>
+                        <h6 class="fontColorGrayTwo">Top speed 80km/h, Range 60-70km</h6>
+                    </li>
+                    <li class="fw-bold pb-4">
+                        <h5 class="fontResponsive">BATTERY</h5>
+                        <h6 class="fontColorGrayTwo">Improved 4th Gen. NIU Energy Lithium Battery</h6>
+                    </li>
+                    <li class="fw-bold pb-4">
+                        <h5 class="fontResponsive">COMFORT</h5>
+                        <h6 class="fontColorGrayTwo">Large 14" Wheels, 180cm Ground Clearance</h6>
+                    </li>
+                    <li class="fw-bold pb-4">
+                        <h5 class="fontResponsive">DESIGN</h5>
+                        <h6 class="fontColorGrayTwo">Classic Design with New Display Face</h6>
+                    </li>
+                    <li class="fw-bold pb-4">
+                        <h5 class="fontResponsive">SMART</h5>
+                        <h6 class="fontColorGrayTwo">Smart APP Connectivity with Anti-theft Measures</h6>
+                    </li>
+                </ul>
+            </div>
+            <div class="ps-5">
+                <h3 class="pb-2">From $3,999</h3>
+                <button type="button" class="btn btn-danger btn-lg">Find a Store</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container d-flex justify-content-center align-items-center mt-4">
+    <div class="w-50">
+        <h3 class="text-center">BUILT FOR SPEED</h3>
+        <p class="text-center pt-4 fontColorGrayTwo">
+            The NQi GT / NQi GTS has three unique driving modes - boost to top speed with SPORT mode, stretch the range out
+            even farther with E-SAVE mode, or get the best of both worlds with DYNAMIC mode. These are e-mopeds designed to
+            take you farther, faster.
+        </p>
+    </div>
+</div>
+<div class="container-fluid mt-5">
+    <div class="container-fluid d-flex justify-content-center align-items-center bg-dark px-0 rounded">
+        <img src="assets/img/imScootersPage/imgNqisport.svg" class="w-25 py-3">
+    </div>
+    <div class="row">
+        <div class="col-lg-6 offset-lg-1">
+            <div id="carouselNgtSport" class="carousel slide carousel-dark" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/img/imScootersPage/imgCarouselNsports/niuSport{{ imgColor }}One.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/imScootersPage/imgCarouselNsports/niuSport{{ imgColor }}Two.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/imScootersPage/imgCarouselNsports/niuSport{{ imgColor }}Three.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/imScootersPage/imgCarouselNsports/niuSport{{ imgColor }}Four.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselNgtSport" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselNgtSport" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div class="d-flex justify-content-center align-items-center">
+                <div #ngSportSelectWhite class="circleSelector bg-white"></div>
+                <div #ngSportSelectRed class="circleSelector bg-danger"></div>
+                <div #ngSportSelectGray class="circleSelector bgGray"></div>
+                <div #ngSportSelectBlack class="circleSelector bgVeryDark"></div>
+                <div #ngSportSelectDark class="circleSelector bg-dark"></div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="pt-5">
+                <ul>
+                    <li class="fw-bold pb-4">
+                        <h5>NIU ENERGY</h5>
+                        <h6 class="fontColorGrayTwo">2100Wh* Removable Battery</h6>
+                    </li>
+                    <li class="fw-bold pb-4">
+                        <h5>NIU APP</h5>
+                        <h6 class="fontColorGrayTwo">24/7 Connected</h6>
+                    </li>
+                    <li class="fw-bold pb-4">
+                        <h5>PERFORMANCE</h5>
+                        <h6 class="fontColorGrayTwo">Instant Acceleration</h6>
+                    </li>
+                    <li class="fw-bold pb-4">
+                        <h5>SECURITY</h5>
+                        <h6 class="fontColorGrayTwo">Anti-theft alerts</h6>
+                    </li>
+                    <li class="fw-bold pb-4">
+                        <h5>NIU CLOUD</h5>
+                        <h6 class="fontColorGrayTwo">Standard OTA Updates</h6>
+                    </li>
+                    <li class="fw-bold pb-4">
+                        <h5>BOSCH MOTOR</h5>
+                        <h6 class="fontColorGrayTwo">1800W Continuous Power</h6>
+                    </li>
+                </ul>
+            </div>
+            <div class="ps-5">
+                <h3 class="pb-2">From $2,500</h3>
+                <button type="button" class="btn btn-danger btn-lg">Find a Store</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid px-0 my-5 relariveP">
+    <img src="assets/img/imScootersPage/nSportImgTwo.jpg" class="w-100" alt="">
+    <div class="titleUrban">ICONO URBANO</div>
+</div>
+<div class="container-fluid my-5">
+    <div class="row justify-content-center align-items-center">
+        <div class="col-lg-4 col-xl-4">
+            <div id="carouselScooters" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/img/imScootersPage/imgCarouselScootersPage/carouselScootersOne.jpg"
+                            class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/imScootersPage/imgCarouselScootersPage/carouselScootersTwo.jpg"
+                            class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/imScootersPage/imgCarouselScootersPage/carouselScootersThree.jpg"
+                            class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/imScootersPage/imgCarouselScootersPage/carouselScootersFour.jpg"
+                            class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/imScootersPage/imgCarouselScootersPage/carouselScootersFive.jpg"
+                            class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselScooters"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselScooters"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <div class="col-lg-6 text-center">
+            <i class="fas fa-user-lock fontColorRed fs-1 pb-5"></i>
+            <h1>Created For Your Safety</h1>
+            <i class="fas fa-users fontColorRed fs-2 py-5"></i>
+            <h3>Enjoy a travel with your friends</h3>
+            <p class="pt-5 fontColorGrayTwo">Ride a NIU is hat perfect moment at the end of a long day.</p>
+        </div>
+    </div>
+</div>
+<div class="container-fluid px-0 text-center mt-5">
+    <h1 class="fontColorRed">Beauty in the any angle</h1>
+</div>
+<div id="carouselEndScootersIndicators" class="carousel slide carousel-fade mt-5 w-100 mb-2" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselEndScootersIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselEndScootersIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="assets/img/scootersImg/imgCarousel/NIUWhite.jpg" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="assets/img/scootersImg/imgCarousel/NIUBlack.jpg" class="d-block w-100">
+        </div>
+    </div>
+</div>
