--- a/src/app/components/store-page/store-page.component.html
+++ b/src/app/components/store-page/store-page.component.html
@@ -1,1 +1,28 @@
 <p>store-page works!</p>
+
+<div class="container">
+    <h1 #asText>Hola mundo</h1>
+</div>
+
+<button #miBoton>
+    Dar click
+</button>
+
+<div class="container">
+    <img #asImg src="https://m.media-amazon.com/images/I/714Y-BkuKCL._AC_SL1000_.jpg" class="w-25" alt="">
+</div>
+
+<div class="container">
+    <h1 #asTextPrueba>Hola mundo</h1>
+    <h1 #asTextPrueba>Hola mundo</h1>
+    <h1 #asTextPrueba>Hola mundo</h1>
+    <h1 #asTextPrueba>Hola mundo</h1>
+</div>
+
+<div #miBotonDos class="divButton text-center">
+    Click
+</div>
+
+<div #miBotonTres class="divButton text-center">
+    Click dos
+</div>
