--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -40,7 +40,7 @@
                     <li>
                         <div class="textColorFooter">
                             <i class="fab fa-google-play pe-2"></i>
-                            <span class="d-inline-block fs-6" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
+                            <span class="d-inline-block fs-6" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover" title="Top popover" data-bs-content="Disabled popover">
                                 <button class="btn btn-primary" disabled>Android</button>
                             </span>
                             <div>
@@ -53,12 +53,22 @@
                     </li>
                 </dl>
                 <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover" data-bs-original-title>
-                    <button class="btn btn-primary" type="button" disabled>Disabled button</button>
+                    <button class="btn btn-primary" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="Disabled popover" type="button" disabled>Disabled button</button>
                 </span>
-                <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
-                    Popover on top
-                </button>
             </div>
         </div>
     </div>
+</div>
+<div class="contaniner mt-5 d-flex justify-content-center align-items-center">
+    <button type="button" class="btn btn-secondary" data-bs-toggle="popover" title="Top popover" data-bs-trigger="hover">
+        Popover on top
+    </button>
+</div>
+<div>
+    <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" title="https://mdbootstrap.com/img/logo/mdb192x192.jpg">
+        <button class="btn btn-primary" type="button">Disabled button</button>
+    </span>
+    <br>
+    <a class="btn btn-primary" data-toggle="popover-hover" data-img="https://mdbootstrap.com/img/logo/mdb192x192.jpg">Hover
+        over me</a>
 </div>
