--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg bgRed">
-    <div class="container">
+    <div class="container container-xxl">
         <a class="navbar-brand text-white justify-content-center d-flex align-items-center fw-bold textNav" routerLink="/">
             <img src="./assets/img/logoNiuSvg.svg" alt="" width="65" class="d-inline-block align-text-top me-2">
         </a>
     </div>
 </nav>
 <nav class="navbar navbar-expand-lg navbar-light navbar-effect">
-    <div class="wrapper"> </div>
+    <div class="wrapper"></div>
     <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,16 +14,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" routerLink="/scooters" id="navbarDropdownMenuLink" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Scooters
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" routerLink="/">N GT</a></li>
-                        <li><a class="dropdown-item" routerLink="/">NSport</a></li>
-                        <li><a class="dropdown-item" routerLink="/">M+ Sport</a></li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/scooters">Scooters</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/about">About us</a>
