--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@media (min-width: 1500px) {
+    .fontSizeResponsive{
+        font-size: 3rem !important;
+    }
+    
+    .fontSizeResponsiveTwo{
+        font-size: 1.7rem !important;
+    }
+
+    .fontSizeResponsiveThree{
+        font-size: 3.5rem !important;
+    }
+
+    .imgResponsive{
+        height: 600px !important;
+        width: 600px !important;
+    }
+}
